--- a/app/src/main/res/layout/activity_card_flip.xml
+++ b/app/src/main/res/layout/activity_card_flip.xml
@@ -2,8 +2,25 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/card_flip_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000000"
     tools:context=".CardFlip">
+
+    <Button
+        android:id="@+id/redView"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="FRONT"
+        android:textColor="@android:color/black"
+        android:textSize="40sp"
+        android:gravity="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@android:color/holo_red_dark"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
