--- a/app/src/main/res/layout/activity_four_cross_four.xml
+++ b/app/src/main/res/layout/activity_four_cross_four.xml
@@ -27,9 +27,8 @@
 
     <LinearLayout
         android:id="@+id/four_cross_four_tiles_background"
-        android:layout_width="380dp"
-        android:layout_height="380dp"
-
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,37 +40,42 @@
             android:id="@+id/first_row"
             android:layout_width="match_parent"
             android:layout_height="90dp"
-            android:layout_marginTop="5dp"
             android:orientation="horizontal">
 
             <Button
                 android:id="@+id/first_row_first_image"
                 android:layout_width="90dp"
+                android:textSize="26sp"
                 android:layout_height="match_parent"
                 android:background="#AF0000">
-
             </Button>
 
             <Button
                 android:id="@+id/first_row_second_image"
                 android:layout_width="90dp"
+                android:textSize="26sp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
-                android:background="#9C27B0"></Button>
+                android:background="#9C27B0">
+            </Button>
 
             <Button
                 android:id="@+id/first_row_third_image"
                 android:layout_width="90dp"
+                android:textSize="26sp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
-                android:background="#FF5722"></Button>
+                android:background="#FF5722">
+            </Button>
 
             <Button
                 android:id="@+id/first_row_fourth_image"
                 android:layout_width="90dp"
+                android:textSize="26sp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
-                android:background="#2196F3"></Button>
+                android:background="#2196F3">
+            </Button>
 
 
         </LinearLayout>
@@ -86,29 +90,38 @@
             <Button
                 android:id="@+id/second_row_first_image"
                 android:layout_width="90dp"
+                android:textSize="26sp"
                 android:layout_height="match_parent"
-                android:background="#4CAF50"></Button>
+                android:background="#4CAF50">
+            </Button>
 
             <Button
                 android:id="@+id/second_row_second_image"
                 android:layout_width="90dp"
+                android:textSize="26sp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
-                android:background="#FFEB3B"></Button>
+                android:background="#FFEB3B">
+            </Button>
 
             <Button
                 android:id="@+id/second_row_third_image"
                 android:layout_width="90dp"
+                android:textColor="#ffffff"
+                android:textSize="26sp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
-                android:background="#0E1870"></Button>
+                android:background="#0E1870">
+            </Button>
 
             <Button
                 android:id="@+id/second_row_fourth_image"
                 android:layout_width="90dp"
+                android:textSize="26sp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
-                android:background="#FF5252"></Button>
+                android:background="#FF5252">
+            </Button>
 
         </LinearLayout>
 
@@ -122,30 +135,38 @@
             <Button
                 android:id="@+id/third_row_first_image"
                 android:layout_width="90dp"
+                android:textSize="26sp"
                 android:layout_height="match_parent"
-                android:background="#6200EA"></Button>
+                android:background="#6200EA">
+            </Button>
 
             <Button
                 android:id="@+id/third_row_second_image"
                 android:layout_width="90dp"
+                android:textSize="26sp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
-                android:background="#304FFE"></Button>
+                android:background="#304FFE">
+            </Button>
 
             <Button
                 android:id="@+id/third_row_third_image"
                 android:layout_width="90dp"
+                android:textSize="26sp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
-                android:background="#AA00FF"></Button>
+                android:background="#AA00FF">
+            </Button>
 
             <Button
                 android:id="@+id/third_row_fourth_image"
                 android:layout_width="90dp"
+                android:textSize="26sp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
                 android:background="#AEEA00"
-                tools:ignore="ContentDescription"></Button>
+                tools:ignore="ContentDescription">
+            </Button>
 
         </LinearLayout>
 
@@ -159,29 +180,37 @@
             <Button
                 android:id="@+id/fourth_row_first_image"
                 android:layout_width="90dp"
+                android:textSize="26sp"
                 android:layout_height="match_parent"
-                android:background="#FF3D00"></Button>
+                android:background="#FF3D00">
+            </Button>
 
             <Button
                 android:id="@+id/fourth_row_second_image"
                 android:layout_width="90dp"
+                android:textSize="26sp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
-                android:background="#004D40"></Button>
+                android:background="#004D40">
+            </Button>
 
             <Button
                 android:id="@+id/fourth_row_third_image"
                 android:layout_width="90dp"
+                android:textSize="26sp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
-                android:background="#311B92"></Button>
+                android:background="#311B92">
+            </Button>
 
             <Button
                 android:id="@+id/fourth_row_fourth_image"
                 android:layout_width="90dp"
+                android:textSize="26sp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
-                android:background="#33691E"></Button>
+                android:background="#33691E">
+            </Button>
 
         </LinearLayout>
 
