--- a/app/src/main/res/layout/activity_two_cross_two.xml
+++ b/app/src/main/res/layout/activity_two_cross_two.xml
@@ -39,7 +39,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="5dp"
             android:layout_height="90dp"
             android:orientation="horizontal">
 
@@ -47,14 +47,18 @@
             <Button
                 android:id="@+id/first_row_first"
                 android:layout_width="90dp"
+                android:textSize="25sp"
+                android:gravity="center"
                 android:layout_height="90dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginRight="5dp"
                 android:background="#785292">
             </Button>
 
             <Button
                 android:id="@+id/first_row_second"
                 android:layout_width="90dp"
+                android:textSize="25sp"
+                android:textColor="@android:color/white"
                 android:layout_height="90dp"
                 android:background="#343453">
             </Button>
@@ -70,14 +74,15 @@
                 android:id="@+id/second_row_first"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
-
-                android:layout_marginRight="10dp"
+                android:textSize="25sp"
+                android:layout_marginRight="5dp"
                 android:background="#FFC107">
             </Button>
 
             <Button
                 android:id="@+id/second_row_second"
                 android:layout_width="90dp"
+                android:textSize="25sp"
                 android:layout_height="90dp"
                 android:background="#00BCD4">
             </Button>
