--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
-    tools:context=".MainActivity"
-    >
+    tools:context=".MainActivity">
 
     <ImageView
         android:id="@+id/splash_screen_logo_1"
@@ -27,6 +26,7 @@
         android:layout_width="200dp"
         android:layout_height="35dp"
         android:layout_marginBottom="276dp"
+        android:background="#FFFFFF"
         android:text="Go to menu"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
