Changing Button Appearance.

--- a/app/src/main/res/layout/content_menu.xml
+++ b/app/src/main/res/layout/content_menu.xml
@@ -27,9 +27,9 @@
         android:layout_width="152dp"
         android:layout_height="30dp"
         android:layout_marginTop="75dp"
-        android:background="#ffffff"
+        android:background="@drawable/custom_buttons"
         android:text="PLAY"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,9 +43,9 @@
         android:layout_width="152dp"
         android:layout_height="30dp"
         android:layout_marginTop="20dp"
-        android:background="#ffffff"
+        android:background="@drawable/custom_buttons"
         android:text="Feedback"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/content_menu_your_scores">
@@ -57,9 +57,9 @@
         android:layout_width="152dp"
         android:layout_height="30dp"
         android:layout_marginTop="20dp"
-        android:background="#ffffff"
+        android:background="@drawable/custom_buttons"
         android:text="Your Scores"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
@@ -72,9 +72,9 @@
         android:layout_width="152dp"
         android:layout_height="30dp"
         android:layout_marginTop="20dp"
-        android:background="#ffffff"
+        android:background="@drawable/custom_buttons"
         android:text="Quit Game"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
@@ -87,9 +87,9 @@
         android:layout_width="152dp"
         android:layout_height="30dp"
         android:layout_marginTop="20dp"
-        android:background="#ffffff"
+        android:background="@drawable/custom_buttons"
         android:text="How to play?"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/content_menu_feedback"
