--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,9 +26,9 @@
         android:layout_width="200dp"
         android:layout_height="35dp"
         android:layout_marginBottom="276dp"
-        android:background="#FFFFFF"
+        android:background="@drawable/custom_buttons"
         android:text="Go to menu"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
