--- a/app/src/main/res/layout/activity_two_cross_two.xml
+++ b/app/src/main/res/layout/activity_two_cross_two.xml
@@ -26,70 +26,60 @@
 
     </TextView>
 
-    <LinearLayout
-        android:id="@+id/two_cross_two_tiles_background"
+
+    <GridLayout
+        android:id="@+id/gridLayout2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:orientation="vertical"
+        android:layout_marginTop="20dp"
+        android:columnCount="2"
+        android:rowCount="2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/two_cross_two_top_text">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_marginBottom="5dp"
+        <Button
+            android:id="@+id/first_row_first"
+            android:layout_width="90dp"
             android:layout_height="90dp"
-            android:orientation="horizontal">
+            android:layout_row="0"
+            android:layout_margin="2dp"
+            android:layout_marginRight="5dp"
+            android:background="#785292"
+            android:gravity="center"
+            android:textSize="25sp">
+        </Button>
 
-
-            <Button
-                android:id="@+id/first_row_first"
-                android:layout_width="90dp"
-                android:textSize="25sp"
-                android:gravity="center"
-                android:layout_height="90dp"
-                android:layout_marginRight="5dp"
-                android:background="#785292">
-            </Button>
-
-            <Button
-                android:id="@+id/first_row_second"
-                android:layout_width="90dp"
-                android:textSize="25sp"
-                android:textColor="@android:color/white"
-                android:layout_height="90dp"
-                android:background="#343453">
-            </Button>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/first_row_second"
+            android:layout_width="90dp"
             android:layout_height="90dp"
-            android:orientation="horizontal">
+            android:layout_margin="2dp"
+            android:background="#343453"
+            android:textColor="@android:color/white"
+            android:textSize="25sp"></Button>
 
-            <Button
-                android:id="@+id/second_row_first"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:textSize="25sp"
-                android:layout_marginRight="5dp"
-                android:background="#FFC107">
-            </Button>
+        <Button
+            android:id="@+id/second_row_first"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_margin="2dp"
+            android:layout_marginRight="5dp"
+            android:background="#FFC107"
+            android:textSize="25sp"></Button>
 
-            <Button
-                android:id="@+id/second_row_second"
-                android:layout_width="90dp"
-                android:textSize="25sp"
-                android:layout_height="90dp"
-                android:background="#00BCD4">
-            </Button>
 
-        </LinearLayout>
+        <Button
+            android:id="@+id/second_row_second"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_margin="2dp"
+            android:background="#00BCD4"
+            android:textSize="25sp"></Button>
 
-    </LinearLayout>
+
+
+    </GridLayout>
 
     <TextView
         android:id="@+id/two_cross_two_bottom_text"
@@ -103,11 +93,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/two_cross_two_tiles_background"
+        app:layout_constraintTop_toBottomOf="@+id/gridLayout2"
         tools:ignore="HardcodedText">
 
     </TextView>
-
 
     <Button
         android:id="@+id/start"
@@ -120,8 +109,9 @@
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/two_cross_two_bottom_text">
-    </Button>
+        app:layout_constraintTop_toBottomOf="@+id/two_cross_two_bottom_text"
+        app:layout_constraintVertical_bias="0.447"></Button>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
